--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,18 @@
 <center>
   <form method = "POST">
-      <label>Insert Quantity of soup (RM 35 each): </label>
+      <label>Insert Quantity of loose (RM 35 each): </label>
       <input type="number" name="loose" min="0" max="99" value="0">
       <br />
-      <label>Insert Insert Quantity of salad (RM 32 each): </label>
+      <label>Insert Insert Quantity of regular (RM 32 each): </label>
       <input type="number" name="regular" min="0" max="99" value="0">
       <br />
-      <label>Insert Insert Quantity of coffee (RM 29 each): </label>
+      <label>Insert Insert Quantity of slim (RM 29 each): </label>
       <input type="number" name="slim" min="0" max="99" value="0">
       <br />
-      <label>Insert Insert Quantity of water (RM 30 each): </label>
+      <label>Insert Insert Quantity of skinny (RM 30 each): </label>
       <input type="number" name="skinny" min="0" max="99" value="0">
       <br/r>
-      <label>Insert Insert Quantity of water (RM 34 each): </label>
+      <label>Insert Insert Quantity of relaxed (RM 34 each): </label>
       <input type="number" name="relaxed" min="0" max="99" value="0">
       <br/r>
       <input type="submit">
